<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Text color. -->
    <item
        android:id="@+id/homeMenuZ"
        android:title="@string/ziyaoHomePage"
        app:showAsAction="never" />
    <item
        android:id="@+id/savedRecipeMenu"
        android:title="@string/ziyaoSavedRecipes"
        app:showAsAction="never" />
    <item
        android:id="@+id/aboutRecipeMenu"
        android:title="@string/ziyaoAbout"
        app:showAsAction="never" />
    <item
        android:id="@+id/saveTheRecipe"
        android:title="@string/ziyaoSaveTheRecipe"
        android:icon="@drawable/save"
        app:showAsAction="always" />
    <item
        android:id="@+id/ziyaodictionary"
        android:icon="@drawable/dictionary"
        android:title="@string/ziyaodictionary"
        app:showAsAction="always" />
    <item
        android:id="@+id/yxSongpage"
        android:icon="@drawable/song"
        android:title="@string/yxSongname"
        app:showAsAction="always" />
    <item
        android:id="@+id/yxSunpage"
        android:icon="@drawable/sunrise"
        android:title="@string/yxSunname"
        app:showAsAction="always" />
</menu>