<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Text color. -->
    <item
        android:id="@+id/sunMenu"
        android:title="@string/sunApp"
        app:showAsAction="never" />
    <item
        android:id="@+id/recipeMenu"
        android:title="@string/recipeApp"
        app:showAsAction="never" />
    <item
        android:id="@+id/dictionaryMenu"
        android:title="@string/dictionaryApp"
        app:showAsAction="never" />
    <item
        android:id="@+id/deezer"
        android:title="@string/deezerApp"
        app:showAsAction="never" />
    <item
        android:id="@+id/about"
        android:title="@string/ziyaoAbout"
        app:showAsAction="never" />
</menu>