<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/about"
        android:title="@string/yxAbout_name"
        app:showAsAction="never" />
    <item
        android:id="@+id/delete"
        android:icon="@drawable/delete"
        android:title="Delete this item"
        app:showAsAction="always" />
    <item
        android:id="@+id/saveTheTERM"
        android:icon="@drawable/save"
        android:title="Save this item"
        app:showAsAction="always" />
    <item
        android:id="@+id/yxrecipepage"
        android:title="@string/yxRecipename" />
    <item android:title="@string/yxSongname"
        android:id="@+id/yxSongpage"/>
    <item
        android:id="@+id/yxsavedTerm"
        android:title="@string/yxSaveBtnName" />
    <item android:title="@string/yxSunname"
        android:id="@+id/yxSunpage"/>

</menu>