<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".rita.DeezerAlbum"
    android:background="@drawable/songback"
    >

    <FrameLayout
        android:id="@+id/songfragmentLocation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".rita.DeezerAlbum">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/mysongToolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@color/my_primary"
                />

            <TextView
                android:id="@+id/songmainViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textColor="@color/pink"
                android:textSize="45dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mysongToolbar" />

            <Button
                android:id="@+id/searchsongButton"
                android:layout_width="107dp"
                android:layout_height="55dp"
                android:layout_marginEnd="16dp"
                android:text="@string/ziyaoSearch"
                android:textColor="@color/my_secondary"
                app:layout_constraintEnd_toStartOf="@+id/searchSongText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/songmainViewTitle" />

            <EditText
                android:id="@+id/searchSongText"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="12dp"
                android:hint="@string/ziyaoSearchTextgoeshere"
                android:inputType="text"
                app:layout_constraintEnd_toStartOf="@+id/goToFavList"
                app:layout_constraintTop_toBottomOf="@+id/songmainViewTitle" />

            <Button
                android:id="@+id/goToFavList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:shadowColor="@color/grey"
                android:text="@string/favButton"
                android:textColor="@color/my_secondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/songmainViewTitle" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/songrecyclerView"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/searchsongButton"
                app:layout_constraintEnd_toEndOf="parent"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</LinearLayout>