<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".rita.DeezerSongDetailsFragment"
    android:background="@color/white">

    <TextView
        android:id="@+id/fragementViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/title"
        android:textColor="@color/pink"
        android:textSize="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/songTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="96dp"
        android:text="Song Title Goes Here"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/songnameTextView"
        app:layout_constraintTop_toTopOf="@+id/fragementViewTitle" />

    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Duration goes here"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/songTitle"
        app:layout_constraintTop_toBottomOf="@+id/songTitle" />

    <TextView
        android:id="@+id/albumName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Album name goes here"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/duration"
        app:layout_constraintTop_toBottomOf="@+id/duration" />

    <ImageView
        android:id="@+id/albumCover"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/albumName" />



    <androidx.appcompat.widget.Toolbar
        android:id="@+id/mysongToolbar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/songnameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/songname"
        android:textColor="@color/green"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragementViewTitle" />

    <TextView
        android:id="@+id/durationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/durationnumber"
        android:textColor="@color/green"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/songnameTextView" />

    <TextView
        android:id="@+id/ablumnameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/albumname"
        android:textColor="@color/green"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/durationTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>