<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sun.SunActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/sunToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/sunFragmentLocation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sunToolbar"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/sunRecycleView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="180dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sunTitleText" />

            <TextView
                android:id="@+id/sunTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/sun_fav"
                android:textSize="24dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/latInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:hint="@string/sun_lat_hint"
                android:inputType="numberDecimal|numberSigned"
                android:textAlignment="gravity"
                app:layout_constraintBottom_toBottomOf="@+id/sunSearchButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/sunSearchButton"
                app:layout_constraintWidth_default="spread"
                app:layout_constraintWidth_percent="0.35" />

            <EditText
                android:id="@+id/lngInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="4dp"
                android:hint="@string/sun_lng_hint"
                android:inputType="numberDecimal|numberSigned"
                android:textAlignment="gravity"
                app:layout_constraintBottom_toBottomOf="@+id/sunSearchButton"
                app:layout_constraintEnd_toStartOf="@+id/sunSearchButton"
                app:layout_constraintStart_toEndOf="@+id/latInput"
                app:layout_constraintTop_toTopOf="@+id/sunSearchButton"
                app:layout_constraintWidth_default="spread"
                app:layout_constraintWidth_percent="0.35" />

            <Button
                android:id="@+id/sunSearchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/sun_search_btn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</LinearLayout>